--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KaspiChessDB",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A Chess Games DataBase",
   "main": "index.html",
   "type": "module",
@@ -13,6 +13,7 @@
   "license": "Free",
   "dependencies": {
     "@chrisoakman/chessboardjs": "^1.0.0",
+    "@mliebelt/pgn-parser": "^1.4.11",
     "chess.js": "^1.0.0-beta.4",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
